Recover from a corrupted geoip DB. Support for JDK 16+ Don't recreate WWL panel when switching 2d/3d view